--- a/module/module_pf/src/main/res/values/dimens.xml
+++ b/module/module_pf/src/main/res/values/dimens.xml
@@ -29,11 +29,37 @@
     <dimen name="ldrawer_gapBetweenBars">3dp</dimen>
     <dimen name="ldrawer_middleBarArrowSize">16dp</dimen>
     <dimen name="navdrawer_width">260dp</dimen>
-     <dimen name="cidian_margin">12dp</dimen>
+    <dimen name="cidian_margin">12dp</dimen>
+
+    <!--  -->
+    <dimen name="text_size_8">8sp</dimen>
+    <dimen name="text_size_9">9sp</dimen>
+    <dimen name="text_size_10">10sp</dimen>
+    <dimen name="text_size_11">11sp</dimen>
+    <dimen name="text_size_12">12sp</dimen>
+    <dimen name="text_size_13">13sp</dimen>
+    <dimen name="text_size_14">14sp</dimen>
+    <dimen name="text_size_15">15sp</dimen>
+    <dimen name="text_size_16">16sp</dimen>
+    <dimen name="text_size_17">17sp</dimen>
+    <dimen name="text_size_18">18sp</dimen>
+    <dimen name="text_size_19">19sp</dimen>
+    <dimen name="text_size_20">20sp</dimen>
+    <dimen name="text_size_21">21sp</dimen>
+    <dimen name="text_size_22">22sp</dimen>
+    <dimen name="text_size_23">23sp</dimen>
+    <dimen name="text_size_24">24sp</dimen>
+    <dimen name="text_size_25">25sp</dimen>
+    <dimen name="text_size_26">26sp</dimen>
+    <dimen name="text_size_27">27sp</dimen>
+    <dimen name="text_size_28">28sp</dimen>
+    <dimen name="text_size_29">29sp</dimen>
+    <dimen name="text_size_30">30sp</dimen>
+
 
     <!-- chat -->
     <dimen name="icon_user">45dp</dimen>
-    
+
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
@@ -55,14 +81,14 @@
     <dimen name="time_line_line_width">2.0dip</dimen>
     <dimen name="time_line_content_left_margin">52.0dip</dimen>
     <dimen name="time_line_content_right_margin">7.0dip</dimen>
-    
+
     <dimen name="score_item_height">100.0dip</dimen>
-     
-     <dimen name="margin_chat_top">5.0dip</dimen>
-     
-     
-        <dimen name="image_edit_color_radius">5dip</dimen>  <!-- 颜色选择背景的圆角 -->
-   <dimen name="image_edit_color_wh_1">42dip</dimen>
-      <dimen name="image_edit_color_wh_2">38dip</dimen>
+
+    <dimen name="margin_chat_top">5.0dip</dimen>
+
+
+    <dimen name="image_edit_color_radius">5dip</dimen>  <!-- 颜色选择背景的圆角 -->
+    <dimen name="image_edit_color_wh_1">42dip</dimen>
+    <dimen name="image_edit_color_wh_2">38dip</dimen>
 
 </resources>
